Fixed css error in schema designer.

--- a/component/forms/schema/schema.html
+++ b/component/forms/schema/schema.html
@@ -2,7 +2,7 @@
     <div class="alert alert-danger" ng-show="vm.error">
         <strong>An error has occurred!</strong> Error in schema.
     </div>
-    <div class="container" ng-if="schema.layout.length === 0">
+    <div class="container" ng-if="schema.layout.length === 0" style="width: 100%;">
         <div class="col-lg-12 alert alert-info text-center">
             <p class="box-schema-area-empty-x">X</p>
             <p class="lead hidden-phone">To start <strong>Drag</strong> a <strong>section</strong>
