--- a/component/forms/schema/schema.html
+++ b/component/forms/schema/schema.html
@@ -4,9 +4,9 @@
     </div>
     <div class="container" ng-if="schema.layout.length === 0" style="width: 100%;">
         <div class="col-lg-12 alert alert-info text-center">
-            <p class="box-schema-area-empty-x">X</p>
+            <p class="box-schema-area-empty-x"><span class="fa fa-arrow-down"></span></p>
             <p class="lead hidden-phone">To start <strong>Drag</strong> a <strong>section</strong>
-                from the <strong>toolbar</strong> onto this <strong>canvas</strong>.</p>
+                from the <strong>toolbar</strong> down to this <strong>canvas</strong>.</p>
         </div>
     </div>
     <ul dnd-list="schema.layout" dnd-allowed-types="schema.allowedTypes">
