--- a/component/forms/toolbar/toolbar.html
+++ b/component/forms/toolbar/toolbar.html
@@ -1,16 +1,16 @@
-<div class="toolbar-container box-solid">
-     <!--bs-affix data-offset-top="10" data-offset-bottom="0">-->
+<div class="toolbar-container box-solid" bs-affix data-offset-top="10" data-offset-bottom="0">
     <div class="form-header with-border">
-        <h3 class="box-title">{{vm.toolbar.title}}</h3>
+        <h3 class="box-title">{{toolbar.title}}</h3>
     </div>
     <!-- /.box-header -->
     <div class="box-body">
         <uib-accordion close-others="true">
             <div uib-accordion-group class="panel-default" panel-class="panel-toolbar" heading="{{group.title}}"
-                 is-open="group.open" is-disabled="group.disabled" ng-repeat="group in vm.toolbar.groups"
+                 is-open="group.open" is-disabled="group.disabled" ng-repeat="group in toolbar.groups"
                  ng-init="groupIndex = $index">
                 <ul class="list-group no-margin-bottom">
-                    <li class="toolbar-component padding-bottom no-padding-top" ng-repeat="component in group.components">
+                    <li class="toolbar-component padding-bottom no-padding-top"
+                        ng-repeat="component in group.components">
                         <div class="box-toolbar"
                              dnd-draggable="component"
                              dnd-type="component.componentType"
