--- a/component/forms/schema/components/field/field.html
+++ b/component/forms/schema/components/field/field.html
@@ -3,23 +3,23 @@
         <div class="btn-toolbar btn-toolbar-right">
             <!--We have two settings button if it is popover or not-->
             <button class="btn btn-default btn-xs" type="button"
-                    ng-hide="popoverProps"
-                    ng-disabled="field.displayProperties && field.invalid"
                     ng-class="{ 'active': field.showProperties }"
                     ng-click="toggleFieldProperties(field)"
-                    title="Configure this field.">
-                <span class="fa fa-wrench"></span>
-            </button>
-            <button class="btn btn-default btn-xs" type="button"
-                    ng-show="popoverProps"
-                    ng-disabled="field.displayProperties && field.invalid"
-                    ng-class="{ 'active': field.showProperties }"
                     title="Configure this field."
                     uib-popover-template="'forms/schema/components/field/properties.html'"
                     popover-append-to-body='true' popover-placement='auto bottom'
-                    popover-trigger="outsideClick" popover-title="Field config">
+                    popover-trigger="none" popover-title="Field config"
+                    popover-is-open="field.popoverProps">
                 <span class="fa fa-wrench"></span>
             </button>
+            <!--<button class="btn btn-default btn-xs" type="button"-->
+                    <!--ng-show="field.popoverProps"-->
+                    <!--title="Configure this field."-->
+                    <!--uib-popover-template="'forms/schema/components/field/properties.html'"-->
+                    <!--popover-append-to-body='true' popover-placement='auto bottom'-->
+                    <!--popover-trigger="outsideClick" popover-title="Field config">-->
+                <!--<span class="fa fa-wrench"></span>-->
+            <!--</button>-->
 
             <!--<button class="btn btn-default btn-xs" type="button"-->
             <!--ng-click="swap(index - 1, index)"-->
