Added checkbox and checkbox list components.

--- a/component/forms/toolbar/components/input.html
+++ b/component/forms/toolbar/components/input.html
@@ -1,2 +1,2 @@
 <div ng-include="'forms/toolbar/components/label.html'"></div>
-<input class="form-control" name="{{component.name}}" id="{{component.name}}"/>
+<input class="form-control" type="{{component.type}}" name="{{component.name}}" id="{{component.name}}"/>
