Updated ods-signature directive.

--- a/component/forms/schema/components/field/field.html
+++ b/component/forms/schema/components/field/field.html
@@ -31,7 +31,7 @@
             <!--ng-disabled="$index === schema.fields.length - 1" title="Move down">-->
             <!--<span class="fa fa-arrow-right"></span>-->
             <!--</button>-->
-            <button class="btn btn-default btn-xs btn-danger" type="button" title="Remove"
+            <button class="btn btn-xs btn-danger" type="button" title="Remove"
                     ng-click="removeField(index)">
                 <span class="fa fa-trash"></span>
             </button>
