--- a/component/forms/toolbar/components/component.html
+++ b/component/forms/toolbar/components/component.html
@@ -1,7 +1,7 @@
 <div class="" ng-class="{ 'error': object.invalid}">
     <div class="box-overlay">
         <div class="btn-toolbar btn-toolbar-right">
-            <button class="btn btn-default btn-xs btn-primary" type="button"
+            <button class="btn btn-xs btn-primary" type="button"
                     title="Add this field.">
                 <span class="fa fa-hand-pointer-o"></span>
             </button>
