Fixed delete buttons, removed btn-default class.

--- a/component/forms/schema/components/row/row.html
+++ b/component/forms/schema/components/row/row.html
@@ -7,7 +7,7 @@
                     ng-click="toggleRowProperties(row)">
                 <span class="fa fa-wrench"></span>
             </button>
-            <button class="btn btn-default btn-xs btn-danger" type="button" title="Remove"
+            <button class="btn btn-xs btn-danger" type="button" title="Remove"
                     ng-click="removeRow(index)">
                 <span class="fa fa-trash"></span>
             </button>
