--- a/component/forms/schema/components/section/section.html
+++ b/component/forms/schema/components/section/section.html
@@ -18,7 +18,7 @@
                     ng-disabled="index === schema.layout.length - 1">
                 <span class="fa fa-arrow-down"></span>
             </button>
-            <button class="btn btn-default btn-xs btn-danger" type="button"
+            <button class="btn btn-xs btn-danger" type="button"
                     ng-click="remove(index)" title="Remove">
                 <span class="fa fa-trash"></span>
             </button>
