--- a/component/forms/toolbar/components/no-component.html
+++ b/component/forms/toolbar/components/no-component.html
@@ -1,4 +1,4 @@
 <div>
     <h3>Component error</h3>
-    <div style="padding: 5px;">Please fix this component: {{component.name}}, Type: {{component.componentType}}</div>
+    <div style="padding: 5px;">Component template not found, please fix the path, type: {{component.componentType}}</div>
 </div>
