--- a/component/forms/schema/components/no-field.html
+++ b/component/forms/schema/components/no-field.html
@@ -1,4 +1,4 @@
 <div>
     <h4>Field error</h4>
-    <div style="padding: 5px;">Please fix this field: {{field.name}}, Type: {{field.type}}</div>
+    <div style="padding: 5px;">Schema template not found, please fix the path, type: {{field.type}}</div>
 </div>
