Added to formService strSubstitutor method.

--- a/component/forms/schema/components/field/field-properties.html
+++ b/component/forms/schema/components/field/field-properties.html
@@ -83,6 +83,7 @@
         </div>
     </uib-tab>
     <uib-tab index="3" heading="Debug" ng-show="debugMode">
-        <ods-model model="row" css-class="fixed-height"></ods-model>
+        <div ng-include="'forms/schema/components/base-properties/model-properties.html'"></div>
+        <!--<ods-model model="row" css-class="fixed-height"></ods-model>-->
     </uib-tab>
 </uib-tabset>
