--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -76,6 +76,6 @@
         </form>
     </uib-tab>
     <uib-tab index="3" heading="Debug" ng-show="debugMode">
-        <ods-model model="row" css-class="fixed-height"></ods-model>
+        <div ng-include="'forms/schema/components/base-properties/model-properties.html'"></div>
     </uib-tab>
 </uib-tabset>
