--- a/component/forms/schema/components/select/select-properties.html
+++ b/component/forms/schema/components/select/select-properties.html
@@ -21,6 +21,6 @@
         </form>
     </uib-tab>
     <uib-tab index="3" heading="Debug" ng-show="debugMode">
-        <ods-model model="field"></ods-model>
+        <div ng-include="'forms/schema/components/base-properties/model-properties.html'"></div>
     </uib-tab>
 </uib-tabset>
