--- a/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
+++ b/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
@@ -2,16 +2,16 @@
     <uib-tab index="0" heading="Properties">
         <form name="fieldPropertiesForm" class="form-horizontal">
             <div class="box-body padding-top">
-                <div ng-include="'forms/schema/components/base-properties/common-properties.html'"></div>
+                <div ng-include="'forms/schema/components/base-properties/name-properties.html'"></div>
+                <div ng-include="'forms/schema/components/base-properties/label-properties.html'"></div>
+                <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
             </div>
         </form>
     </uib-tab>
-    <uib-tab index="1" heading="Validation">
+    <uib-tab index="1" heading="Options">
         <form name="fieldValidationForm" class="form-horizontal">
             <div class="box-body padding-top">
-                <div ng-include="'forms/schema/components/base-properties/minlength-properties.html'"></div>
-                <div ng-include="'forms/schema/components/base-properties/maxlength-properties.html'"></div>
-                <div ng-include="'forms/schema/components/base-properties/required-properties.html'"></div>
+                <ods-field-select-options field="field"></ods-field-select-options>
             </div>
         </form>
     </uib-tab>
