--- a/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
+++ b/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
@@ -11,7 +11,36 @@
     <uib-tab index="1" heading="Options">
         <form name="fieldValidationForm" class="form-horizontal">
             <div class="box-body padding-top">
-                <ods-field-select-options field="field"></ods-field-select-options>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldPropertiesForm.prefix.$invalid}">
+                        <label for="prefix" class="col-sm-4 control-label">Prefix:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="prefix" name="prefix"
+                                   placeholder="Prefix..." ng-model="field.options.prefix" ng-required="true">
+                        </div>
+                    </div>
+                </div>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldPropertiesForm.suffix.$invalid}">
+                        <label for="suffix" class="col-sm-4 control-label">Suffix:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="suffix" name="suffix"
+                                   placeholder="Suffix..." ng-model="field.options.suffix" ng-required="true">
+                        </div>
+                    </div>
+                </div>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldPropertiesForm.suffix.$invalid}">
+                        <label for="suffix" class="col-sm-4 control-label">Suffix:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="suffix" name="suffix"
+                                   placeholder="Suffix..." ng-model="field.options.suffix" ng-required="true">
+                        </div>
+                    </div>
+                </div>
             </div>
         </form>
     </uib-tab>
