--- a/component/forms/schema/schema.html
+++ b/component/forms/schema/schema.html
@@ -15,7 +15,7 @@
             dnd-disable-if="section.componentType == undefined"
             dnd-effect-allowed="move"
             dnd-moved="schema.layout.splice($index, 1)">
-            <ods-section schema="schema" section="section" index="$index" debug-mode="debugMode"></ods-section>
+            <ods-section schema="schema" section="section" config="config" index="$index" debug-mode="debugMode"></ods-section>
         </li>
     </ul>
 </div>
