--- a/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
+++ b/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
@@ -5,6 +5,28 @@
                 <div ng-include="'forms/schema/components/base-properties/name-properties.html'"></div>
                 <div ng-include="'forms/schema/components/base-properties/label-properties.html'"></div>
                 <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldValidationForm.locked.$invalid}">
+                        <label for="locked" class="col-sm-4 control-label"
+                               title="Indicates if suggestions are locked in this field.">Suggestions locked:</label>
+                        <div class="col-sm-8">
+                            <input type="checkbox" id="locked" name="locked" ng-model="field.options.locked"
+                                   class="ng-pristine ng-valid">
+                        </div>
+                    </div>
+                </div>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldValidationForm.usedAsConsent.$invalid}">
+                        <label for="usedAsConsent" class="col-sm-4 control-label"
+                               title="Indicates if CKEditor are used as Consent.">Used As Consent:</label>
+                        <div class="col-sm-8">
+                            <input type="checkbox" id="usedAsConsent" name="usedAsConsent" ng-model="field.usedAsConsent"
+                                   class="ng-pristine ng-valid">
+                        </div>
+                    </div>
+                </div>
             </div>
         </form>
     </uib-tab>
@@ -12,35 +34,34 @@
         <form name="fieldValidationForm" class="form-horizontal">
             <div class="box-body padding-top">
                 <div class="row no-vertical-margin">
-                    <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldPropertiesForm.prefix.$invalid}">
-                        <label for="prefix" class="col-sm-4 control-label">Prefix:</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="prefix" name="prefix"
-                                   placeholder="Prefix..." ng-model="field.options.prefix" ng-required="true">
+                    <div class="col-lg-1">
+                    </div>
+                    <div class="col-lg-11">
+                        <div class="form-group margin-bottom"
+                             ng-class="{'has-error': fieldPropertiesForm.prefix.$invalid}">
+                            <label for="prefix" class="col-sm-2 control-label">Prefix:</label>
+                            <div class="col-sm-2">
+                                <input type="text" class="form-control" id="prefix" name="prefix"
+                                       placeholder="Prefix..." ng-model="field.options.prefix" ng-required="true">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="row no-vertical-margin">
-                    <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldPropertiesForm.suffix.$invalid}">
-                        <label for="suffix" class="col-sm-4 control-label">Suffix:</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="suffix" name="suffix"
-                                   placeholder="Suffix..." ng-model="field.options.suffix" ng-required="true">
+                    <div class="col-lg-1">
+                    </div>
+                    <div class="col-lg-11">
+                        <div class="form-group margin-bottom"
+                             ng-class="{'has-error': fieldPropertiesForm.suffix.$invalid}">
+                            <label for="suffix" class="col-sm-2 control-label">Suffix:</label>
+                            <div class="col-sm-2">
+                                <input type="text" class="form-control" id="suffix" name="suffix"
+                                       placeholder="Suffix..." ng-model="field.options.suffix" ng-required="true">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row no-vertical-margin">
-                    <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldPropertiesForm.suffix.$invalid}">
-                        <label for="suffix" class="col-sm-4 control-label">Suffix:</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="suffix" name="suffix"
-                                   placeholder="Suffix..." ng-model="field.options.suffix" ng-required="true">
-                        </div>
-                    </div>
-                </div>
+                <ods-suggestion-options field="field" config="config"></ods-suggestion-options>
             </div>
         </form>
     </uib-tab>
