--- a/component/forms/form-builder.html
+++ b/component/forms/form-builder.html
@@ -1,3 +1,10 @@
+<!--<div class="row">-->
+    <!--<div class="col-lg-12">-->
+        <!--<button type="button" class="btn btn-success" ng-click="toggleStyle()">-->
+            <!--<span class="fa fa-refresh"></span>&nbsp;<span>Toggle style</span>-->
+        <!--</button>-->
+    <!--</div>-->
+<!--</div>-->
 <div class="row">
     <div class="col-md-3">
         <ods-form-toolbar></ods-form-toolbar>
@@ -13,7 +20,10 @@
             <uib-tab index="2" heading="Form Preview">
                 <ods-form schema="schema" config="runTimeConfig" on-save="saveForm(schema)"></ods-form>
             </uib-tab>
-            <uib-tab index="3" heading="Form Model" ng-show="debugMode">
+            <uib-tab index="3" heading="Form Print View">
+                <ods-viewer schema="schema" css-class="cssClass"></ods-viewer>
+            </uib-tab>
+            <uib-tab index="4" heading="Form Model" ng-show="debugMode">
                 <ods-model model="schema"></ods-model>
             </uib-tab>
         </uib-tabset>
