--- a/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
+++ b/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
@@ -18,11 +18,11 @@
                 </div>
                 <div class="row no-vertical-margin">
                     <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldValidationForm.usedAsConsent.$invalid}">
-                        <label for="usedAsConsent" class="col-sm-4 control-label"
-                               title="Indicates if CKEditor are used as Consent.">Used As Consent:</label>
+                         ng-class="{'has-error': fieldValidationForm.printView.$invalid}">
+                        <label for="printView" class="col-sm-4 control-label"
+                               title="Indicates if CKEditor will show as print view.">Print View:</label>
                         <div class="col-sm-8">
-                            <input type="checkbox" id="usedAsConsent" name="usedAsConsent" ng-model="field.usedAsConsent"
+                            <input type="checkbox" id="printView" name="printView" ng-model="field.printView"
                                    class="ng-pristine ng-valid">
                         </div>
                     </div>
