Fixed come errors with debug mode in sections and rows, inline radios.

--- a/component/forms/common/fields/radio-list.html
+++ b/component/forms/common/fields/radio-list.html
@@ -1,3 +1,4 @@
+<br ng-if="field.inline">
 <div ng-class="field.inline === true ? 'radio-inline' : 'radio'"
      ng-repeat="option in field.options | limitTo: field.limitTo">
     <label>
