--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -42,6 +42,6 @@
         </form>
     </uib-tab>
     <uib-tab index="3" heading="Debug" ng-show="debugMode">
-        <div ng-include="'forms/schema/components/base-properties/model-properties.html'"></div>
+        <ods-model model="section"></ods-model>
     </uib-tab>
 </uib-tabset>
