Added checkbox list to form print view.

--- a/component/forms/common/fields/checkbox-list.html
+++ b/component/forms/common/fields/checkbox-list.html
@@ -1,3 +1,4 @@
+<br ng-if="field.inline">
 <div ng-class="field.inline === true ? 'checkbox-inline' : 'checkbox'" ng-repeat="option in field.options">
     <label>
         <input type="checkbox" value="{{option.id}}" ng-model="field.value[option.id]" />
