--- a/component/forms/common/viewer/plugins/if-yes.html
+++ b/component/forms/common/viewer/plugins/if-yes.html
@@ -1,7 +1,3 @@
-<br ng-if="field.ln">
-<toggle name="{{field.name}}" id="{{field.name}}" on="{{field.on}}" off="{{field.off}}"
-        ng-model="field.value.toggle"></toggle>
-<textarea class="form-control" name="{{field.name}}" id="{{field.name}}" placeholder="{{field.placeholder}}"
-          title="{{field.tooltip}}" style="margin-top: 10px;" ng-model="field.value.textarea"
-          ng-required="field.value.toggle" type="{{field.type}}" ng-minlength="getMinLength(field)"
-          ng-maxlength="getMaxLength(field)" rows="{{field.rows}}" ng-show="field.value.toggle"></textarea>
+<!--<br ng-if="field.ln">-->
+<div ng-bind-html="field.value.toggle ? field.on : field.off"></div>
+<div ng-bind-html="field.value.textarea" ng-if="field.value.toggle"></div>
