--- a/component/forms/common/viewer/plugins/table.html
+++ b/component/forms/common/viewer/plugins/table.html
@@ -3,7 +3,7 @@
     <tr ng-repeat="row in field.matrix">
         <td ng-repeat="col in row" class="table-td {{col.cssClass}}" width="{{col.width}}">
             <div class="col-lg-12" ng-repeat="field in col.fields">
-                <ng-include src="getFormFieldTemplate(field.type)"></ng-include>
+                <ng-include src="getFormViewerTemplate(field.type)"></ng-include>
             </div>
         </td>
         <td ng-show="field.manageRows" width="20px">
@@ -30,6 +30,3 @@
     </tr>
     </tbody>
 </table>
-<div class="btn-edit position-relative">
-    <button type="button" class="btn btn-primary pull-right" ng-click="cloneRow(field)">Clone row</button>
-</div>
