--- a/component/forms/common/viewer/plugins/ckeditor.html
+++ b/component/forms/common/viewer/plugins/ckeditor.html
@@ -1,2 +1,2 @@
-<div ng-bind-html="valueSubtitutor(field.value, field.options.tokens, field.options.prefix, field.options.suffix)">
+<div ng-bind-html="valueSubtitutor(field)">
 </div>
