--- a/component/forms/schema/plugins/ckeditor/ckeditor.html
+++ b/component/forms/schema/plugins/ckeditor/ckeditor.html
@@ -1,6 +1,6 @@
 <div ng-include="'forms/schema/components/label.html'"></div>
 <div class="position-relative">
-<textarea id="{{field.name}}" name="{{field.name}}" placeholder="{{field.placeholder}}" ng-model="field.value"
-          title="{{field.tooltip}}" ck="ck" options="field.options" ods-ckeditor ng-disabled="field.readonly">
+<textarea id="{{field.name}}-dev" name="{{field.name}}-dev" placeholder="{{field.placeholder}}" ng-model="field.value"
+          title="{{field.tooltip}}" options="field.options" ods-ckeditor ng-disabled="field.readonly">
 </textarea>
 </div>
