Fixed section and row field equal name.

--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -4,10 +4,10 @@
             <div class="container padding-top">
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.name.$invalid}">
-                            <label for="name" class="col-sm-5 control-label">Name:</label>
+                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.rowName.$invalid}">
+                            <label for="rowName" class="col-sm-5 control-label">Name:</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" id="name" name="name"
+                                <input type="text" class="form-control" id="rowName" name="rowName"
                                        placeholder="Name..." ng-model="row.name"
                                        ng-required="true">
                             </div>
