Fixed CKEditor name generation.

--- a/component/forms/common/fields/textarea.html
+++ b/component/forms/common/fields/textarea.html
@@ -1,4 +1,5 @@
 <textarea class="form-control" ods-dynamic-name="field.name" id="{{field.name}}" placeholder="{{field.placeholder}}"
           title="{{field.tooltip}}" ng-model="field.value" ng-required="getRequired(field)" type="{{field.type}}"
-          ng-minlength="getMinLength(field)" ng-maxlength="getMaxLength(field)" rows="{{field.rows}}">
+          ng-minlength="getMinLength(field)" ng-maxlength="getMaxLength(field)" rows="{{field.rows}}"
+          data-resize="disabled">
 </textarea>
