Added hide form title.

--- a/component/forms/viewer/viewer.html
+++ b/component/forms/viewer/viewer.html
@@ -1,6 +1,6 @@
 <div class="{{cssClass}}">
     <div class="form-header with-border">
-        <h3 class="box-title" ng-bind-html="schema.label"></h3>
+        <h3 class="box-title" ng-hide="schema.hideLabel" ng-bind-html="schema.label"></h3>
     </div>
     <!-- /.box-header -->
     <!-- form start -->
