--- a/component/forms/form-info/form-info.html
+++ b/component/forms/form-info/form-info.html
@@ -2,14 +2,14 @@
     <div class="box-body padding-top">
         <div class="row">
             <div class="col-lg-6">
-                <div class="form-group" ng-class="{'has-error': formSchema.formName.$invalid}">
+                <div class="form-group" ng-class="{'has-error': formInfo.formName.$invalid}">
                     <label class="control-label" for="formName">Form name</label>
                     <input class="form-control" name="formName" id="formName"
                            ng-model="schema.name" ng-required="true"/>
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="form-group" ng-class="{'has-error': formSchema.formLabel.$invalid}">
+                <div class="form-group" ng-class="{'has-error': formInfo.formLabel.$invalid}">
                     <label class="control-label" for="formLabel">Form label</label>
                     <input class="form-control" name="formLabel" id="formLabel"
                            ng-model="schema.label" ng-required="true"/>
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="form-group" ng-class="{'has-error': formSchema.description.$invalid}">
+                <div class="form-group" ng-class="{'has-error': formInfo.description.$invalid}">
                     <label class="control-label" for="description">Form description</label>
                     <textarea class="form-control" name="description" id="description"
                               ng-model="schema.description" ng-required="false"
@@ -28,12 +28,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
-                <div class="form-group" ng-class="{'has-error': formSchema.handleSubmit.$invalid}">
+            <div class="col-lg-3">
+                <div class="form-group" ng-class="{'has-error': formInfo.handleSubmit.$invalid}">
                     <label class="control-label" for="handleSubmit">Handle submit internally: &nbsp;</label>
                     <input type="checkbox" name="handleSubmit" id="handleSubmit"
                            ng-model="schema.handleSubmit" ng-required="false"
                            title="Specify if submit is handle by form (in this case you must to specify submit callback) or externally">
+                    </input>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="form-group" ng-class="{'has-error': formInfo.handleSubmit.$invalid}">
+                    <label class="control-label" for="hideLabel">Hide form title: &nbsp;</label>
+                    <input type="checkbox" name="hideLabel" id="hideLabel"
+                           ng-model="schema.hideLabel" ng-required="false"
+                           title="This allow to hide the form title.">
                     </input>
                 </div>
             </div>
