Fixed canCloneButton table plugin in Form View.

--- a/component/forms/common/fields/plugins/table.html
+++ b/component/forms/common/fields/plugins/table.html
@@ -30,6 +30,6 @@
     </tr>
     </tbody>
 </table>
-<div class="btn-edit position-relative">
+<div class="btn-edit position-relative" ng-show="field.canCloneRow">
     <button type="button" class="btn btn-primary pull-right" ng-click="cloneRow(field)">Clone row</button>
 </div>
