--- a/component/forms/schema/plugins/table/table-props.html
+++ b/component/forms/schema/plugins/table/table-props.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
                 <h3>Columns configuration</h3>
-                <table class="table table-bordered">
+                <table class="table table-bordered table-responsive">
                     <thead>
                     <tr>
                         <th>#</th>
