Fixed table rows management.

--- a/component/forms/common/fields/plugins/table.html
+++ b/component/forms/common/fields/plugins/table.html
@@ -8,7 +8,7 @@
         </td>
         <td ng-show="field.manageRows" width="20px">
             <button type="button" ng-click="removeRow(field, $index)" title="Remove row"
-                    ng-show="field.rowHeader && $index != 0" class="btn btn-danger pull-right">
+                    ng-show="field.manageRows && !(field.manageRows && $index === 0)" class="btn btn-danger pull-right">
                 <span class="fa fa-trash"></span>
             </button>
         </td>
