--- a/component/forms/schema/plugins/table/table.html
+++ b/component/forms/schema/plugins/table/table.html
@@ -23,7 +23,7 @@
             </td>
             <td ng-show="field.manageRows" width="20px">
                 <button type="button" ng-click="removeRow(field, $index)" title="Remove row"
-                        ng-show="field.rowHeader && $index !== 0" class="btn btn-danger pull-right">
+                        ng-show="field.manageRows && !(field.manageRows && $index === 0)" class="btn btn-danger pull-right">
                     <span class="fa fa-trash"></span>
                 </button>
                 <button type="button" ng-click="swapRow($index - 1, $index)" title="Swap row up"
