Fixed model directive heigth.

--- a/component/forms/form-builder.html
+++ b/component/forms/form-builder.html
@@ -24,7 +24,7 @@
                 <ods-viewer schema="schema" config="runTimeConfig" css-class="cssClass"></ods-viewer>
             </uib-tab>
             <uib-tab index="4" heading="Form Model" ng-show="debugMode">
-                <ods-model model="schema"></ods-model>
+                <ods-model model="schema" css-class="fixed-height"></ods-model>
             </uib-tab>
         </uib-tabset>
     </div>
