--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -42,6 +42,6 @@
         </form>
     </uib-tab>
     <uib-tab index="3" heading="Debug" ng-show="debugMode">
-        <ods-model model="section"></ods-model>
+        <ods-model model="section" css-class="fixed-height"></ods-model>
     </uib-tab>
 </uib-tabset>
