--- a/component/forms/schema/plugins/table/table-properties.html
+++ b/component/forms/schema/plugins/table/table-properties.html
@@ -35,6 +35,6 @@
         <ods-table-props field="field"></ods-table-props>
     </uib-tab>
     <uib-tab index="2" heading="Debug" ng-show="debugMode">
-        <ods-model model="field" css-class="fixed-height"></ods-model>
+        <div ng-include="'forms/schema/components/base-properties/model-properties.html'"></div>
     </uib-tab>
 </uib-tabset>
