--- a/component/forms/schema/plugins/if-yes/if-yes-properties.html
+++ b/component/forms/schema/plugins/if-yes/if-yes-properties.html
@@ -29,6 +29,6 @@
         </form>
     </uib-tab>
     <uib-tab index="2" heading="Debug" ng-show="debugMode">
-        <ods-model model="field"></ods-model>
+        <div ng-include="'forms/schema/components/base-properties/model-properties.html'"></div>
     </uib-tab>
 </uib-tabset>
