--- a/component/forms/schema/components/input.html
+++ b/component/forms/schema/components/input.html
@@ -1,3 +1,3 @@
 <div ng-include="'forms/schema/components/label.html'"></div>
-<input class="form-control" name="{{field.name}}" id="{{field.name}}" ng-model="field.value" type="{{field.type}}"
+<input class="form-control" name="{{field.name}}-dev" id="{{field.name}}-dev" ng-model="field.value" type="{{field.type}}"
        placeholder="{{field.placeholder}}" ng-required="{{field.required}}" title="{{field.tooltip}}"/>
