--- a/component/forms/toolbar/components/component.html
+++ b/component/forms/toolbar/components/component.html
@@ -5,6 +5,10 @@
                     title="Add this field.">
                 <span class="fa fa-hand-pointer-o"></span>
             </button>
+            <button class="btn btn-xs btn-danger" type="button" title="Delete from Clipboard."
+                    ng-if="group.allowDelete" ng-click="removeFromClipboard($index)">
+                <span class="fa fa-trash"></span>
+            </button>
         </div>
     </div>
     <div class="box-body">
