--- a/component/forms/common/fields/datetime.html
+++ b/component/forms/common/fields/datetime.html
@@ -1,5 +1,5 @@
 <div class="input-group">
-    <input id="{{field.name}}" class="form-control" ods-dynamic-name="field.name" type="text" enable-time="field.enableTime"
+    <input id="{{field.name + dev}}" class="form-control" ods-dynamic-name="field.name" type="text" enable-time="field.enableTime"
            datetime-picker="{{field.format}}" ng-required="getRequired(field)" ng-model="field.value"
            is-open="field.open" model-options="field.options"/>
     <span class="input-group-btn">
