Fixed tokens load in schema view.

--- a/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
+++ b/component/forms/schema/plugins/ckeditor/ckeditor-properties.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <ods-suggestion-options field="field" config="config"></ods-suggestion-options>
+                <ods-suggestion-options field="field" config="config" profile="dev"></ods-suggestion-options>
             </div>
         </form>
     </uib-tab>
