Fixed errors with CKEditor.

--- a/component/forms/schema/plugins/ckeditor/suggestion-options-properties.html
+++ b/component/forms/schema/plugins/ckeditor/suggestion-options-properties.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 </div>
-<table class="table table-condensed position-relative" style="position: relative;">
+<table class="table table-condensed position-relative" style="position: relative;max-height: 250px;overflow-y: auto;">
     <thead>
     <tr>
         <th></th>
