--- a/component/forms/schema/components/base-properties/required-properties.html
+++ b/component/forms/schema/components/base-properties/required-properties.html
@@ -1,20 +1,22 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldValidationForm.required.$invalid}">
-        <label for="required" class="col-sm-4 control-label"
+         ng-class="{'has-error': fieldValidationForm.{{field.name}}-required.$invalid}">
+        <label for="{{field.name}}-required" class="col-sm-4 control-label"
                title="Indicates if a value is required for this field.">Required:</label>
         <div class="col-sm-8">
-            <input type="checkbox" id="required" name="required" ng-model="field.validation.required"
+            <input type="checkbox" id="{{field.name}}-required" name="{{field.name}}-required"
+                   ng-model="field.validation.required"
                    class="ng-pristine ng-valid" ng-change="onChangeRequired()">
         </div>
     </div>
 </div>
 <div class="row no-vertical-margin" ng-show="field.validation.required">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldValidationForm.requiredMessage.$invalid}">
-        <label for="requiredMessage" class="col-sm-4 control-label">Required Message</label>
+         ng-class="{'has-error': fieldValidationForm.{{field.name}}-requiredMessage.$invalid}">
+        <label for="{{field.name}}-requiredMessage" class="col-sm-4 control-label">Required Message</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="requiredMessage" name="requiredMessage"
+            <input type="text" class="form-control" id="{{field.name}}-requiredMessage"
+                   name="{{field.name}}-requiredMessage"
                    placeholder="Required Message..." ng-model="field.validation.messages.required"
                    ng-required="false">
         </div>
