--- a/component/forms/schema/components/base-properties/label-properties.html
+++ b/component/forms/schema/components/base-properties/label-properties.html
@@ -1,20 +1,21 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldPropertiesForm.label.$invalid}">
-        <label for="label" class="col-sm-4 control-label">Label:</label>
+         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-label.$invalid}">
+        <label for="{{field.name}}-label" class="col-sm-4 control-label">Label:</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="label" name="label"
+            <input type="text" class="form-control" id="{{field.name}}-label" name="{{field.name}}-label"
                    placeholder="Label..." ng-model="field.label" ng-required="false">
         </div>
     </div>
 </div>
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldPropertiesForm.hideLabel.$invalid}">
-        <label for="hideLabel" class="col-sm-4 control-label"
+         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-hideLabel.$invalid}">
+        <label for="{{field.name}}-hideLabel" class="col-sm-4 control-label"
                title="Indicates if will show label or not.">Hide Label:</label>
         <div class="col-sm-8">
-            <input type="checkbox" id="hideLabel" name="hideLabel" ng-model="field.hideLabel">
+            <input type="checkbox" id="{{field.name}}-hideLabel" name="{{field.name}}-hideLabel"
+                   ng-model="field.hideLabel">
         </div>
     </div>
 </div>
