--- a/component/forms/schema/components/base-properties/minlength-properties.html
+++ b/component/forms/schema/components/base-properties/minlength-properties.html
@@ -1,9 +1,9 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
          ng-class="{'has-error': fieldValidationForm.minLength.$invalid}">
-        <label for="minLength" class="col-sm-4 control-label">Min Length:</label>
+        <label for="{{field.name}}-minLength" class="col-sm-4 control-label">Min Length:</label>
         <div class="col-sm-8">
-            <input type="number" class="form-control" id="minLength" name="minLength"
+            <input type="number" class="form-control" id="{{field.name}}-minLength" name="{{field.name}}-minLength"
                    placeholder="Min Length..." ng-model="field.validation.minlength"
                    ng-required="false" ng-change="onChangeMinLength()">
         </div>
@@ -11,10 +11,11 @@
 </div>
 <div class="row no-vertical-margin" ng-show="field.validation.minlength">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldValidationForm.minLengthMessage.$invalid}">
-        <label for="minLengthMessage" class="col-sm-4 control-label">Message</label>
+         ng-class="{'has-error': fieldValidationForm.{{field.name}}-minLengthMessage.$invalid}">
+        <label for="{{field.name}}-minLengthMessage" class="col-sm-4 control-label">Message</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="minLengthMessage" name="minLengthMessage"
+            <input type="text" class="form-control" id="{{field.name}}-minLengthMessage"
+                   name="{{field.name}}-minLengthMessage"
                    placeholder="Min length message..." ng-model="field.validation.messages.minlength"
                    ng-required="false">
         </div>
