--- a/component/forms/schema/components/base-properties/name-properties.html
+++ b/component/forms/schema/components/base-properties/name-properties.html
@@ -1,9 +1,9 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldPropertiesForm.name.$invalid}">
-        <label for="name" class="col-sm-4 control-label">Name:</label>
+         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-name.$invalid}">
+        <label for="{{field.name}}-name" class="col-sm-4 control-label">Name:</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="name" name="name"
+            <input type="text" class="form-control" id="{{field.name}}-name" name="{{field.name}}-name"
                    placeholder="Name..." ng-model="field.name" ng-required="true">
         </div>
     </div>
