--- a/component/forms/schema/components/base-properties/pattern-properties.html
+++ b/component/forms/schema/components/base-properties/pattern-properties.html
@@ -1,9 +1,9 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldValidationForm.patternSelect.$invalid}">
-        <label for="patternSelect" class="col-sm-4 control-label">Pattern Selection</label>
+         ng-class="{'has-error': fieldValidationForm.{{field.name}}-patternSelect.$invalid}">
+        <label for="{{field.name}}-patternSelect" class="col-sm-4 control-label">Pattern Selection</label>
         <div class="col-sm-8">
-            <select name="patternSelect" id="patternSelect" ng-model="field.patternSelect"
+            <select name="{{field.name}}-patternSelect" id="{{field.name}}-patternSelect" ng-model="field.patternSelect"
                     class="form-control" ng-change="onSelectPattern()">
                 <option value="">Select Pattern...</option>
                 <option ng-repeat="option in patterns" value="{{option.value}}">{{option.title}}
@@ -14,20 +14,21 @@
 </div>
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldValidationForm.pattern.$invalid}">
-        <label for="pattern" class="col-sm-4 control-label">Pattern</label>
+         ng-class="{'has-error': fieldValidationForm.{{field.name}}-pattern.$invalid}">
+        <label for="{{field.name}}-pattern" class="col-sm-4 control-label">Pattern</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="pattern" name="pattern"
+            <input type="text" class="form-control" id="{{field.name}}-pattern" name="{{field.name}}-pattern"
                    ng-model="field.validation.pattern" ng-required="false" readonly>
         </div>
     </div>
 </div>
 <div class="row no-vertical-margin" ng-show="field.patternSelect">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldValidationForm.patternMessage.$invalid}">
-        <label for="patternMessage" class="col-sm-4 control-label">Message</label>
+         ng-class="{'has-error': fieldValidationForm.{{field.name}}-patternMessage.$invalid}">
+        <label for="{{field.name}}-patternMessage" class="col-sm-4 control-label">Message</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="patternMessage" name="patternMessage"
+            <input type="text" class="form-control" id="{{field.name}}-patternMessage"
+                   name="{{field.name}}-patternMessage"
                    placeholder="Pattern Message..." ng-model="field.validation.messages.pattern"
                    ng-required="false">
         </div>
