--- a/component/forms/schema/components/base-properties/tooltip-properties.html
+++ b/component/forms/schema/components/base-properties/tooltip-properties.html
@@ -1,9 +1,9 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom"
-         ng-class="{'has-error': fieldPropertiesForm.tooltip.$invalid}">
-        <label for="tooltip" class="col-sm-4 control-label">Tooltip:</label>
+         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-tooltip.$invalid}">
+        <label for="{{field.name}}-tooltip" class="col-sm-4 control-label">Tooltip:</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="tooltip" name="tooltip"
+            <input type="text" class="form-control" id="{{field.name}}-tooltip" name="{{field.name}}-tooltip"
                    placeholder="Tooltip..." ng-model="field.tooltip" ng-required="false">
         </div>
     </div>
