--- a/component/steps-indicator/style.css
+++ b/component/steps-indicator/style.css
@@ -112,6 +112,12 @@
     font-weight: bold;
 }
 
+/*.ods-breadcrumb a.disabled {*/
+    /*pointer-events: none;*/
+    /*cursor: not-allowed;*/
+    /*opacity: .65;*/
+    /*filter: alpha(opacity=65);*/
+/*}*/
 
 .success a, .success a:after {
     /*background: white;*/
