--- a/component/steps-indicator/template.html
+++ b/component/steps-indicator/template.html
@@ -1,3 +1,3 @@
 <div class="ods-breadcrumb {{class}}">
-    <a class="{{step.status}}" ng-repeat="step in ngModel" ng-click="changeStatus(step)">{{step.label}}</a>
+    <a class="{{step.status}} {{step.disabled ? 'disabled': ''}}" ng-repeat="step in ngModel" ng-click="changeStatus(step)">{{step.label}}</a>
 </div>
