--- a/component/forms/schema/components/label/label-properties.html
+++ b/component/forms/schema/components/label/label-properties.html
@@ -5,10 +5,10 @@
                 <div ng-include="'forms/schema/components/base-properties/label-properties.html'"></div>
                 <div class="row no-vertical-margin">
                     <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldPropertiesForm.cssClass.$invalid}">
-                        <label for="cssClass" class="col-sm-2 control-label">Css class:</label>
+                         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-cssClass.$invalid}">
+                        <label for="{{field.name}}-cssClass" class="col-sm-2 control-label">Css class:</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="cssClass" name="cssClass"
+                            <input type="text" class="form-control" id="{{field.name}}-cssClass" name="{{field.name}}-cssClass"
                                    placeholder="Css class..." ng-model="field.cssClass"
                                    ng-required="false">
                         </div>
