Trying to fix duplicated names and ids in DOM.

--- a/component/forms/common/fields/textarea.html
+++ b/component/forms/common/fields/textarea.html
@@ -1,4 +1,4 @@
-<textarea class="form-control" ods-dynamic-name="field.name" id="{{field.name}}" placeholder="{{field.placeholder}}"
+<textarea class="form-control" ods-dynamic-name="field.name" id="{{field.name + dev}}" placeholder="{{field.placeholder}}"
           title="{{field.tooltip}}" ng-model="field.value" ng-required="getRequired(field)" type="{{field.type}}"
           ng-minlength="getMinLength(field)" ng-maxlength="getMaxLength(field)" rows="{{field.rows}}"
           data-resize="disabled">
