Fixed options properties list table scroll.

--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -1,6 +1,6 @@
 <uib-tabset class="nav-tabs-custom">
     <uib-tab index="0" heading="Properties">
-        <form name="sectionPropertiesForm" class="form-horizontal">
+        <form name="sectionPropertiesForm" class="form form-horizontal">
             <div class="padding-top">
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <!--<h3>Columns configuration</h3>-->
-                        <div class="table-responsive">
+                        <div class="table-responsive" style="max-height: 200px">
                             <table class="table table-condensed table-striped">
                                 <thead>
                                 <tr>
